--- a/AndroidApp/app/src/main/res/values/colors.xml
+++ b/AndroidApp/app/src/main/res/values/colors.xml
@@ -1,10 +1,63 @@
-<?xml version="1.0" encoding="utf-8"?>
+
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="seed">#1d3557</color>
+    <color name="md_theme_light_primary">#245FA6</color>
+    <color name="md_theme_light_onPrimary">#FFFFFF</color>
+    <color name="md_theme_light_primaryContainer">#D5E3FF</color>
+    <color name="md_theme_light_onPrimaryContainer">#001B3C</color>
+    <color name="md_theme_light_secondary">#00658F</color>
+    <color name="md_theme_light_onSecondary">#FFFFFF</color>
+    <color name="md_theme_light_secondaryContainer">#C7E7FF</color>
+    <color name="md_theme_light_onSecondaryContainer">#001E2E</color>
+    <color name="md_theme_light_tertiary">#00696D</color>
+    <color name="md_theme_light_onTertiary">#FFFFFF</color>
+    <color name="md_theme_light_tertiaryContainer">#6FF6FC</color>
+    <color name="md_theme_light_onTertiaryContainer">#002021</color>
+    <color name="md_theme_light_error">#BA1A1A</color>
+    <color name="md_theme_light_errorContainer">#FFDAD6</color>
+    <color name="md_theme_light_onError">#FFFFFF</color>
+    <color name="md_theme_light_onErrorContainer">#410002</color>
+    <color name="md_theme_light_background">#F6FEFF</color>
+    <color name="md_theme_light_onBackground">#001F24</color>
+    <color name="md_theme_light_surface">#F6FEFF</color>
+    <color name="md_theme_light_onSurface">#001F24</color>
+    <color name="md_theme_light_surfaceVariant">#E0E2EC</color>
+    <color name="md_theme_light_onSurfaceVariant">#43474E</color>
+    <color name="md_theme_light_outline">#74777F</color>
+    <color name="md_theme_light_inverseOnSurface">#D0F8FF</color>
+    <color name="md_theme_light_inverseSurface">#00363D</color>
+    <color name="md_theme_light_inversePrimary">#A7C8FF</color>
+    <color name="md_theme_light_shadow">#000000</color>
+    <color name="md_theme_light_surfaceTint">#245FA6</color>
+    <color name="md_theme_light_surfaceTintColor">#245FA6</color>
+    <color name="md_theme_dark_primary">#A7C8FF</color>
+    <color name="md_theme_dark_onPrimary">#003061</color>
+    <color name="md_theme_dark_primaryContainer">#004689</color>
+    <color name="md_theme_dark_onPrimaryContainer">#D5E3FF</color>
+    <color name="md_theme_dark_secondary">#85CFFF</color>
+    <color name="md_theme_dark_onSecondary">#00344C</color>
+    <color name="md_theme_dark_secondaryContainer">#004C6C</color>
+    <color name="md_theme_dark_onSecondaryContainer">#C7E7FF</color>
+    <color name="md_theme_dark_tertiary">#4CD9DF</color>
+    <color name="md_theme_dark_onTertiary">#003739</color>
+    <color name="md_theme_dark_tertiaryContainer">#004F52</color>
+    <color name="md_theme_dark_onTertiaryContainer">#6FF6FC</color>
+    <color name="md_theme_dark_error">#FFB4AB</color>
+    <color name="md_theme_dark_errorContainer">#93000A</color>
+    <color name="md_theme_dark_onError">#690005</color>
+    <color name="md_theme_dark_onErrorContainer">#FFDAD6</color>
+    <color name="md_theme_dark_background">#001F24</color>
+    <color name="md_theme_dark_onBackground">#97F0FF</color>
+    <color name="md_theme_dark_surface">#001F24</color>
+    <color name="md_theme_dark_onSurface">#97F0FF</color>
+    <color name="md_theme_dark_surfaceVariant">#43474E</color>
+    <color name="md_theme_dark_onSurfaceVariant">#C4C6CF</color>
+    <color name="md_theme_dark_outline">#8E9199</color>
+    <color name="md_theme_dark_inverseOnSurface">#001F24</color>
+    <color name="md_theme_dark_inverseSurface">#97F0FF</color>
+    <color name="md_theme_dark_inversePrimary">#245FA6</color>
+    <color name="md_theme_dark_shadow">#000000</color>
+    <color name="md_theme_dark_surfaceTint">#A7C8FF</color>
+    <color name="md_theme_dark_surfaceTintColor">#A7C8FF</color>
+    <color name="CustomColor1">#E63946</color>
 </resources>
