--- a/AndroidApp/app/src/main/res/values/colors.xml
+++ b/AndroidApp/app/src/main/res/values/colors.xml
@@ -9,23 +9,23 @@
     <color name="md_theme_light_onSecondary">#FFFFFF</color>
     <color name="md_theme_light_secondaryContainer">#C7E7FF</color>
     <color name="md_theme_light_onSecondaryContainer">#001E2E</color>
-    <color name="md_theme_light_tertiary">#00696D</color>
+    <color name="md_theme_light_tertiary">#984061</color>
     <color name="md_theme_light_onTertiary">#FFFFFF</color>
-    <color name="md_theme_light_tertiaryContainer">#6FF6FC</color>
-    <color name="md_theme_light_onTertiaryContainer">#002021</color>
+    <color name="md_theme_light_tertiaryContainer">#FFD9E2</color>
+    <color name="md_theme_light_onTertiaryContainer">#3E001D</color>
     <color name="md_theme_light_error">#BA1A1A</color>
     <color name="md_theme_light_errorContainer">#FFDAD6</color>
     <color name="md_theme_light_onError">#FFFFFF</color>
     <color name="md_theme_light_onErrorContainer">#410002</color>
-    <color name="md_theme_light_background">#F6FEFF</color>
-    <color name="md_theme_light_onBackground">#001F24</color>
-    <color name="md_theme_light_surface">#F6FEFF</color>
-    <color name="md_theme_light_onSurface">#001F24</color>
+    <color name="md_theme_light_background">#FDFBFF</color>
+    <color name="md_theme_light_onBackground">#1A1C1E</color>
+    <color name="md_theme_light_surface">#FDFBFF</color>
+    <color name="md_theme_light_onSurface">#1A1C1E</color>
     <color name="md_theme_light_surfaceVariant">#E0E2EC</color>
     <color name="md_theme_light_onSurfaceVariant">#43474E</color>
     <color name="md_theme_light_outline">#74777F</color>
-    <color name="md_theme_light_inverseOnSurface">#D0F8FF</color>
-    <color name="md_theme_light_inverseSurface">#00363D</color>
+    <color name="md_theme_light_inverseOnSurface">#F1F0F4</color>
+    <color name="md_theme_light_inverseSurface">#2F3033</color>
     <color name="md_theme_light_inversePrimary">#A7C8FF</color>
     <color name="md_theme_light_shadow">#000000</color>
     <color name="md_theme_light_surfaceTint">#245FA6</color>
@@ -38,26 +38,25 @@
     <color name="md_theme_dark_onSecondary">#00344C</color>
     <color name="md_theme_dark_secondaryContainer">#004C6C</color>
     <color name="md_theme_dark_onSecondaryContainer">#C7E7FF</color>
-    <color name="md_theme_dark_tertiary">#4CD9DF</color>
-    <color name="md_theme_dark_onTertiary">#003739</color>
-    <color name="md_theme_dark_tertiaryContainer">#004F52</color>
-    <color name="md_theme_dark_onTertiaryContainer">#6FF6FC</color>
+    <color name="md_theme_dark_tertiary">#FFB1C8</color>
+    <color name="md_theme_dark_onTertiary">#5E1132</color>
+    <color name="md_theme_dark_tertiaryContainer">#7B2949</color>
+    <color name="md_theme_dark_onTertiaryContainer">#FFD9E2</color>
     <color name="md_theme_dark_error">#FFB4AB</color>
     <color name="md_theme_dark_errorContainer">#93000A</color>
     <color name="md_theme_dark_onError">#690005</color>
     <color name="md_theme_dark_onErrorContainer">#FFDAD6</color>
-    <color name="md_theme_dark_background">#001F24</color>
-    <color name="md_theme_dark_onBackground">#97F0FF</color>
-    <color name="md_theme_dark_surface">#001F24</color>
-    <color name="md_theme_dark_onSurface">#97F0FF</color>
+    <color name="md_theme_dark_background">#1A1C1E</color>
+    <color name="md_theme_dark_onBackground">#E3E2E6</color>
+    <color name="md_theme_dark_surface">#1A1C1E</color>
+    <color name="md_theme_dark_onSurface">#E3E2E6</color>
     <color name="md_theme_dark_surfaceVariant">#43474E</color>
     <color name="md_theme_dark_onSurfaceVariant">#C4C6CF</color>
     <color name="md_theme_dark_outline">#8E9199</color>
-    <color name="md_theme_dark_inverseOnSurface">#001F24</color>
-    <color name="md_theme_dark_inverseSurface">#97F0FF</color>
+    <color name="md_theme_dark_inverseOnSurface">#1A1C1E</color>
+    <color name="md_theme_dark_inverseSurface">#E3E2E6</color>
     <color name="md_theme_dark_inversePrimary">#245FA6</color>
     <color name="md_theme_dark_shadow">#000000</color>
     <color name="md_theme_dark_surfaceTint">#A7C8FF</color>
     <color name="md_theme_dark_surfaceTintColor">#A7C8FF</color>
-    <color name="CustomColor1">#E63946</color>
 </resources>
