--- a/AndroidApp/app/src/main/res/layout/activity_login.xml
+++ b/AndroidApp/app/src/main/res/layout/activity_login.xml
@@ -1,72 +1,1 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_alignBottom="@id/topAppBar"
-    android:layout_gravity="center_horizontal"
-    android:orientation="vertical"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    tools:context=".ui.login.LoginActivity">
-
-    <include layout="@layout/toolbar" />
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="?attr/actionBarSize"
-        android:padding="8dp">
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:background="@drawable/input_back"
-            android:orientation="vertical"
-            android:gravity="center"
-            android:padding="32dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-
-            <EditText
-                android:id="@+id/username"
-                android:layout_width="match_parent"
-                android:layout_height="58dp"
-                android:layout_marginBottom="16dp"
-                android:autofillHints="@string/prompt_email"
-                android:hint="@string/prompt_email"
-                android:inputType="textEmailAddress"
-                android:selectAllOnFocus="true" />
-
-            <EditText
-                android:id="@+id/password"
-                android:layout_width="match_parent"
-                android:layout_height="58dp"
-                android:autofillHints="@string/prompt_password"
-                android:hint="@string/prompt_password"
-                android:imeActionLabel="@string/action_sign_in_short"
-                android:imeOptions="actionDone"
-                android:inputType="textPassword"
-                android:selectAllOnFocus="true" />
-
-            <Button
-                android:id="@+id/login"
-                style="@style/ButtonPrimaryDisabled"
-                android:layout_width="wrap_content"
-                android:layout_height="48dp"
-                android:layout_marginTop="16dp"
-                android:enabled="false"
-                android:text="@string/action_sign_in" />
-        </LinearLayout>
-
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+<?xml version="1.0" encoding="utf-8"?><androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:id="@+id/container"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:layout_alignBottom="@id/topAppBar"    android:layout_gravity="center_horizontal"    android:orientation="vertical"    app:layout_constraintBottom_toBottomOf="parent"    app:layout_constraintEnd_toEndOf="parent"    app:layout_constraintStart_toStartOf="parent"    app:layout_constraintTop_toTopOf="parent"    tools:context=".ui.login.LoginActivity">    <include layout="@layout/toolbar" />    <androidx.constraintlayout.widget.ConstraintLayout        android:id="@+id/constraintLayout"        android:layout_width="match_parent"        android:layout_height="697dp"        android:layout_marginTop="?attr/actionBarSize"        android:padding="8dp">        <LinearLayout            android:id="@+id/linearLayout"            android:layout_width="0dp"            android:layout_height="wrap_content"            android:background="@drawable/input_back"            android:gravity="center"            android:orientation="vertical"            android:padding="32dp"            app:layout_constraintBottom_toBottomOf="parent"            app:layout_constraintEnd_toEndOf="parent"            app:layout_constraintStart_toStartOf="parent"            app:layout_constraintTop_toTopOf="parent">            <EditText                android:id="@+id/username"                android:layout_width="match_parent"                android:layout_height="58dp"                android:layout_marginBottom="16dp"                android:autofillHints="@string/prompt_email"                android:hint="@string/prompt_email"                android:inputType="textEmailAddress"                android:selectAllOnFocus="true" />            <EditText                android:id="@+id/password"                android:layout_width="match_parent"                android:layout_height="58dp"                android:autofillHints="@string/prompt_password"                android:hint="@string/prompt_password"                android:imeActionLabel="@string/action_sign_in_short"                android:imeOptions="actionDone"                android:inputType="textPassword"                android:selectAllOnFocus="true" />            <com.google.android.material.button.MaterialButton                android:id="@+id/login"                android:layout_width="wrap_content"                android:layout_height="48dp"                android:layout_marginTop="16dp"                android:enabled="false"                android:text="@string/action_sign_in" />        </LinearLayout>        <ProgressBar            android:id="@+id/loading"            style="?android:attr/progressBarStyle"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:visibility="gone"            app:layout_anchor="@+id/constraintLayout"            app:layout_anchorGravity="center"            app:layout_constraintBottom_toBottomOf="@+id/linearLayout"            app:layout_constraintEnd_toEndOf="@+id/linearLayout"            app:layout_constraintStart_toStartOf="parent"            app:layout_constraintTop_toTopOf="@+id/linearLayout" />    </androidx.constraintlayout.widget.ConstraintLayout></androidx.coordinatorlayout.widget.CoordinatorLayout>
